flask-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-db
  template:
    metadata:
      labels:
        app: flask-db
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
