flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
