flask-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-db
spec:
  selector:
    app: flask-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
